# unity-callback

./: .gitignore
nativeplugin/: Cargo.toml
nativeplugin/src/: lib.rs  windows.rs
testNativePlugin/Assets/Scenes/: SampleScene.unity
testNativePlugin/Assets/Scripts/: nativePlugin.cs
testNativePlugin/ProjectSettings/: ProjectSettings.asset
