[package]
name = "nativeplugin"
version = "0.1.0"
authors = ["vansw"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef"] }
log = "0.4.8"
lazy_static = "1.4.0"